--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,8 @@
-name: Generate Snake
+name: Generate Datas
 
 on:
-  schedule:
-      # every 6 hours
-    - cron: "0 */6 * * *"
-# This command allows us to run the Action automatically from the Actions tab.
+  schedule: # execute every 12 hours
+    - cron: "* */12 * * *"
   workflow_dispatch:
 
 jobs:
@@ -16,7 +14,7 @@ jobs:
       - uses: Platane/snk@master
         id: snake-gif
         with:
-          github_user_name:  ozanozkayatr
+          github_user_name:  zieldecastro
           svg_out_path: dist/github-contribution-grid-snake.svg
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
